# pdfwordify

./: .gitignore  Elements.py  Font.py  README.md  README_RU.md  main.py  pdf_extract.py  pdf_structure.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  save_word.py  test.py
Classes/: Elements.py  Font.py
Resources/word_files/: test.docx
Tools/: config.py  image_extract.py  table_extract.py  text_extract.py
pdfwordify/: converter.py  pdf2word.py  pdf_extract.py  save_word.py
pdfwordify/Classes/: Elements.py  Font.py
pdfwordify/Tools/: config.py  image_extract.py  table_extract.py  text_extract.py
src/: main.py  pdf_extract.py  save_word.py
